fix <li> alignment

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,8 @@ body {
   margin: 0 auto;
   max-width: 45rem;
   padding: 0 15px;
-  font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+  font-family: et-book, Palatino, "Palatino Linotype", "Palatino LT STD",
+    "Book Antiqua", Georgia, serif;
   background-color: #fffff8;
   color: #111;
 }
@@ -16,7 +17,7 @@ h1,
 h2,
 h3 {
   font-weight: 400;
-  line-height: 1
+  line-height: 1;
 }
 
 h1 {
@@ -41,7 +42,7 @@ h3 {
 
 p,
 ol {
-  font-size: 1.4rem
+  font-size: 1.4rem;
 }
 
 p {
@@ -51,12 +52,14 @@ p {
 }
 
 ol {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   -webkit-padding-start: 5%;
-  -webkit-padding-end: 5%
+  -webkit-padding-end: 5%;
 }
 
 li {
-  margin: 2rem 0;
+  margin: 1rem 0;
 }
 
 .center {
@@ -69,7 +72,7 @@ li {
   justify-content: center;
 }
 
-.links>a {
+.links > a {
   font-size: 1.4rem;
   padding-right: 0.5em;
   padding-left: 0.5em;
@@ -91,5 +94,4 @@ html {
   ol {
     column-count: 2;
   }
-
 }
